StepProjects/Final Project/eks-argocd-cicd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-project-app
spec:
  type: ClusterIP
  selector:
    app: argocd-project-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
