StepProjects/Final Project/eks-argocd-cicd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-project-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: app.vaclav.danit13.eks.krkvclv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-project-app
                port:
                  number: 80
